# medpdf

./: .git-blame-ignore-revs  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  FONT_SUBSETTING_PLAN.md  LOPDF_INLINE_IMAGE_BUG.md  PUBLISHING.md  README.md  SVG2PDF_CRATE_REVIEW.md  TODO-opensource-publish.md  TODO.md  feature-plan-fix-aes-encryption.md  feature-plan-multiline-watermark-text.md  feature-plan-place-page.md  feature-plan-recompress-images.md  feature-plan-type0-subsetting.md  feature-plan-unicode-text.md  generate_valign_test.sh  release.toml
bugs/: bug-0001-report-overlay-content-stream-stale-length.md  bug-0002-aes256-tests-mislabeled.md  bug-0003-alpha-resample-halo.md  bug-0004-builtin-symbol-fonts-winansi-encoding.md  bug-0005-cff-otf-font-structures-invalid.md  bug-0006-cmyk-jpeg-app14-decode.md  bug-0007-copy-page-cycle-stack-overflow.md  bug-0008-copy-page-loses-inherited-attributes.md  bug-0009-docs-drift-readmes-plans-claude-md.md  bug-0010-embedded-symbol-fonts-zero-widths.md  bug-0011-fallback-width-bytes-not-chars.md  bug-0012-font-index-dropped-for-collections.md  bug-0013-image-rotation-doc-anchor-vs-center.md  bug-0014-jpeg-reencode-above-maxdpi-undocumented.md  bug-0015-jpeg-sof-validation-gaps.md  bug-0016-overlay-contentless-source-errors.md  bug-0017-overlay-place-inherited-resources.md  bug-0018-overlay-reencode-corrupts-inline-images.md  bug-0019-overlay-split-operation-fragments.md  bug-0020-page-tree-count-maintenance.md  bug-0021-parse-page-spec-silent-clamp.md  bug-0022-pdf-test-visual-pipe-deadlock.md  bug-0023-place-page-ignores-source-rotate.md  bug-0024-place-page-mediabox-origin-semantics.md  bug-0025-place-page-no-dest-isolation.md  bug-0026-place-page-nonfinite-params.md  bug-0027-place-page-rotated-clip-aabb.md  bug-0028-recompress-ignores-mask.md  bug-0029-recompress-predictor2-corruption.md  bug-0030-resources-indirect-subdict-mishandled.md  bug-0031-simple-font-metrics-not-scaled.md  bug-0032-simple-path-missing-glyph-not-loud.md  bug-0033-stretch-fit-over-downsamples.md  bug-0034-subset-head-checksum.md  bug-0035-svg-alpha-missing-transparency-group.md  bug-0036-svg-decompress-silent-fallback.md  bug-0037-watermark-resource-key-collision.md  bug-0038-widths-vec-u8-overflow.md
medpdf/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
medpdf-image/: CHANGELOG.md  Cargo.toml  README.md
medpdf-image/src/: lib.rs  recompress.rs  svg.rs
medpdf-image/tests/: image_integration_tests.rs  svg_integration_tests.rs
medpdf/src/: error.rs  font_data.rs  font_helpers.rs  lib.rs  parsing.rs  pdf_blank_page.rs  pdf_copy_page.rs  pdf_delete_page.rs  pdf_encryption.rs  pdf_font.rs  pdf_font_composite.rs  pdf_helpers.rs  pdf_overlay.rs  pdf_overlay_helpers.rs  pdf_place_page.rs  pdf_subset.rs  pdf_watermark.rs  types.rs
medpdf/tests/: builtin_symbol_font_encoding_regression.rs  cff_otf_font_structure_regression.rs  content_stream_tests.rs  copy_page_cycle_regression.rs  copy_page_inherited_attributes_regression.rs  embedded_symbol_font_regression.rs  encryption_tests.rs  error_tests.rs  fallback_width_char_count_regression.rs  fixtures.rs  font_collection_rejected_regression.rs  font_data_tests.rs  font_helpers_tests.rs  font_metrics_scaling_regression.rs  font_tests.rs  generate_valign_test_pdf.rs  no_raw_stream_content_assignment.rs  overlay_contentless_source_regression.rs  overlay_edge_tests.rs  overlay_indirect_resources_regression.rs  overlay_inherited_resources_regression.rs  overlay_inline_image_regression.rs  overlay_length_regression_tests.rs  overlay_split_operation_regression.rs  overlay_tests.rs  page_tree_count_regression.rs  parsing_tests.rs  pdf_helpers_tests.rs  pdf_operations_tests.rs  place_page_isolation_regression.rs  place_page_tests.rs  roundtrip_tests.rs  simple_font_missing_glyph_regression.rs  subset_tests.rs  unicode_text_tests.rs  unit_conversion_tests.rs  visual_regression_tests.rs  watermark_content_tests.rs  watermark_edge_tests.rs  watermark_resource_key_collision_regression.rs  (+1 more)
pdf-merger/: Cargo.toml  README.md
pdf-merger/src/: main.rs  spec_types.rs
pdf-merger/tests/: spec_types_tests.rs
pdf-test-visual/: Cargo.toml
pdf-test-visual/src/: lib.rs
pdf_merger/: Cargo.toml  LICENSE-APACHE  README.md
pdf_merger/src/: main.rs  spec_types.rs
pdf_merger/tests/: spec_types_tests.rs
scripts/: publish-status.py
src/: error.rs  font_helpers.rs  lib.rs  main.rs  parsing.rs  pdf_blank_page.rs  pdf_copy_page.rs  pdf_font.rs  pdf_helpers.rs  pdf_overlay.rs  pdf_watermark.rs  spec_types.rs
tests/: fixtures.rs  font_tests.rs  overlay_tests.rs  parsing_tests.rs  pdf_helpers_tests.rs  pdf_operations_tests.rs  spec_types_tests.rs  unit_conversion_tests.rs  watermark_tests.rs
