[package]
name = "pdf_merger"
version = "0.1.1"
edition = "2021"

[dependencies]
lopdf = "0.36.0"
clap = { version = "4.5.44", features = ["derive", "string"] }
nom = "7.1"
font-kit = "0.14.3" # For finding system fonts
chrono = "0.4"     # For PDF metadata dates
ttf-parser = "0.25.1"
uuid = { version = "1.18.0", features = ["v4", "fast-rng"] }
