[package]
name = "medpdf-image"
version = "0.2.2"
edition = "2024"
description = "Image embedding companion for medpdf"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ComposerChrisF/medpdf"
readme = "README.md"
keywords = ["pdf", "image", "embed", "png", "jpeg"]
categories = ["multimedia::encoding"]

[features]
svg = ["dep:svg2pdf", "dep:usvg"]
svg-filters = ["svg", "svg2pdf/filters"]

[dependencies]
medpdf = { version = "0.9.2", path = "../medpdf" }
lopdf = "0.39.0"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "tiff", "webp", "rayon"] }
flate2 = "1"
log = "0.4"
svg2pdf = { version = "0.13", optional = true, default-features = false, features = ["text", "image"] }
usvg = { version = "0.45", optional = true }

[dev-dependencies]
tempfile = "3"
