[package]
name = "pdf-merger"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "pdf-merger"
path = "src/main.rs"

[dependencies]
medpdf = { path = "../medpdf" }
lopdf = "0.39.0"
clap = { version = "4.5.44", features = ["derive", "string"] }
chrono = "0.4"
uuid = { version = "1.18.0", features = ["v4", "fast-rng"] }
env_logger = "0.11"
log = "0.4"

[dev-dependencies]
tempfile = "3"
