[package]
name = "pdf-merger"
version = "0.5.3"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "pdf-merger"
path = "src/main.rs"

[dependencies]
medpdf = { path = "../medpdf" }
medpdf-image = { path = "../medpdf-image" }
lopdf = "0.39.0"
clap = { version = "4.5.44", features = ["derive", "string"] }
chrono = "0.4"
uuid = { version = "1.18.0", features = ["v4", "fast-rng"] }
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"
